# Intel-8086-Emulator

./: README.md  hello.asm  hello.com  test_client.py
.emu_tmp/: prog.asm  prog.com
emulator/: CMakeLists.txt
emulator/include/: cpu.h  memory.h
emulator/src/: cpu.c  main.c  memory.c  server.c
gui/pyqt/: README.md  emu_gui.py  emu_gui.spec
tools/: opcode_scan.py
